tests/lean/errors2.lean.expected.out
errors2.lean:8:11: error: unknown identifier 'foo'
